bundled_metadata/force-app/main/default/objects/Visit_List__c/Visit_List__c.object-meta.xml
<CustomObject>
    <description>Visit List</description>
    <label>Visit List</label>
    <nameField>
        <displayFormat>VL-{00000000}</displayFormat>
        <label>Visit List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Lists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>