bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Date__c</fullName>
    <description>Date that the Schedule Visit Group record type is accepted.</description>
    <label>Accepted Date</label>
    <type>Date</type>
</CustomField>