bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Actual_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Actual_Mileage__c</fullName>
    <description>Distance travelled, in miles, converted and stored in a mileage count that is the sum of miles travelled with an associated visit list.</description>
    <label>Actual Mileage</label>
    <precision>8</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>