bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Id__c</fullName>
    <description>The batch number that generating this schedule visit group</description>
    <label>Batch Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>