bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Delivery_Load_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Load_Status__c</fullName>
    <description>Picklist values of the status of a load associated with a visit list.</description>
    <label>Delivery Load Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loaded</fullName>
            </value>
            <value>
                <fullName>In and Valid</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
            </value>
            <value>
                <fullName>EOD</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>In Await</fullName>
            </value>
            <value>
                <fullName>Extrn Proc</fullName>
            </value>
            <value>
                <fullName>Extrn In</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Sent to Extrn</fullName>
            </value>
            <value>
                <fullName>FSV Wait</fullName>
            </value>
            <value>
                <fullName>FSV Process</fullName>
            </value>
            <value>
                <fullName>FSV Revenue/Mech Rte Recalc</fullName>
            </value>
            <value>
                <fullName>FSV Revenue Fail</fullName>
            </value>
            <value>
                <fullName>FSV Revenue Retry</fullName>
            </value>
            <value>
                <fullName>FSV Revenue In Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>