bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date used in the Visit List Group &amp; Schedule Visit Group</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>