bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>End Date used in the Visit List Group &amp; Schedule Visit Group</description>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>