bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>End of day time</description>
    <label>End Time</label>
    <type>Time</type>
</CustomField>