bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>The error message once scheudle failed</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>