bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Freight_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Freight_Order_ID__c</fullName>
    <description>Freight Order ID for PGT Delivery Visit</description>
    <label>Freight Order ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>