bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/G_04_Route_compliance__c.field-meta.xml
<CustomField>
    <fullName>G_04_Route_compliance__c</fullName>
    <formula>IF(Number_of_Planned_Visits__c &gt; 0, 
   Number_of_Completed_Visits__c / Number_of_Planned_Visits__c, 
   0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Compliance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>