bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/G_13_Remaining_Calls__c.field-meta.xml
<CustomField>
    <fullName>G_13_Remaining_Calls__c</fullName>
    <label>Remaining Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>