bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/G_14_Completed_Visits__c.field-meta.xml
<CustomField>
    <fullName>G_14_Completed_Visits__c</fullName>
    <label>Completed Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>