bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/G_15_Success_Rate__c.field-meta.xml
<CustomField>
    <fullName>G_15_Success_Rate__c</fullName>
    <label>Success Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>