bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Is_Notified__c.field-meta.xml
<CustomField>
    <fullName>Is_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this field to true, when a late start day notification is sent to sales reps.</description>
    <label>Is Notified</label>
    <type>Checkbox</type>
</CustomField>