bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/IsChange_Flag__c.field-meta.xml
<CustomField>
    <fullName>IsChange_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Change Flag</description>
    <label>IsChange Flag</label>
    <type>Checkbox</type>
</CustomField>