bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/IsRemoved__c.field-meta.xml
<CustomField>
    <fullName>IsRemoved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Soft Deleted</description>
    <label>Is Removed</label>
    <type>Checkbox</type>
</CustomField>