bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Last_Sync_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Time__c</fullName>
    <description>Record last sync time</description>
    <label>Last Sync Time</label>
    <type>DateTime</type>
</CustomField>