bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Load_Number__c.field-meta.xml
<CustomField>
    <fullName>Load_Number__c</fullName>
    <description>Unique load number ID.</description>
    <label>Load Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>