bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Id__c</fullName>
    <description>The location id this schedule visit group generated for</description>
    <label>Location Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>