bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/My_Schedule_Summary_Data__c.field-meta.xml
<CustomField>
    <fullName>My_Schedule_Summary_Data__c</fullName>
    <label>My Schedule Summary Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>