bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Number_of_Completed_Visits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Completed_Visits__c</fullName>
    <label>Number of Completed Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>