bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Number_of_Planned_Visits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Planned_Visits__c</fullName>
    <description>Count of related visits with Ad_Hoc__c = False</description>
    <label>Number of Planned Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>