bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Number_of_Scheduled_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Scheduled_Employees__c</fullName>
    <description>COUNT(Employees in Schedule Visit Group)</description>
    <label>Number of Scheduled Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>