bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Number_of_Unassigned_Visits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Unassigned_Visits__c</fullName>
    <description>COUNT(Visits in Schedule Visit Group with no Visitor)</description>
    <label>Number of Unassigned Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>