bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Order_Count__c.field-meta.xml
<CustomField>
    <fullName>Order_Count__c</fullName>
    <label>Order Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>