bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/P_20_PICOS_Points__c.field-meta.xml
<CustomField>
    <fullName>P_20_PICOS_Points__c</fullName>
    <label>Picos Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>