bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Resequenced__c.field-meta.xml
<CustomField>
    <fullName>Resequenced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Resequenced</description>
    <label>Resequenced</label>
    <type>Checkbox</type>
</CustomField>