bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/S_14_Daily_Orders_Value__c.field-meta.xml
<CustomField>
    <fullName>S_14_Daily_Orders_Value__c</fullName>
    <label>Daily Orders Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>