bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date used in the Visit List Group &amp; Schedule Visit Group</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>