bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>The datetime of when a check-in punch was registered during execution</description>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>