bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Start_Gap__c.field-meta.xml
<CustomField>
    <fullName>Start_Gap__c</fullName>
    <description>Difference between start of first visit on a visit list and start of day.</description>
    <label>Start Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>