bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Start_Gap_Notification__c.field-meta.xml
<CustomField>
    <fullName>Start_Gap_Notification__c</fullName>
    <description>Record the time from the start of the day to the start of the first visit</description>
    <label>Start Gap Notification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>