bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Start_Location__c.field-meta.xml
<CustomField>
    <fullName>Start_Location__c</fullName>
    <description>Start of day location.</description>
    <label>Start Location</label>
    <scale>13</scale>
    <type>Location</type>
</CustomField>