bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Start of day time.</description>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>