bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Target_Cost__c.field-meta.xml
<CustomField>
    <fullName>Target_Cost__c</fullName>
    <description>Target Cost</description>
    <label>Target Cost</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>