bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Target_Time__c.field-meta.xml
<CustomField>
    <fullName>Target_Time__c</fullName>
    <description>Target Time</description>
    <label>Total Target Time</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>