bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Total_Planned_Cases__c.field-meta.xml
<CustomField>
    <fullName>Total_Planned_Cases__c</fullName>
    <description>Sum of Scheduled_Case_Quantity__c from the related visits</description>
    <label>Total Planned Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>