bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Total_working_seconds_for_a_day__c.field-meta.xml
<CustomField>
    <fullName>Total_working_seconds_for_a_day__c</fullName>
    <description>Working seconds of the user as per Kronos time for a day</description>
    <label>Total working seconds for a day</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>