bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Travel_Time_from_Last_Visit__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time_from_Last_Visit__c</fullName>
    <description>Travel time calculate by SF Maps API from last visit for start from home/ plant merchandisers.</description>
    <label>Travel Time from Last Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>