bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Travel_Time_to_First_Visit__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time_to_First_Visit__c</fullName>
    <description>Travel time calculate by SF Maps API to first visit for start from home/ plant merchandisers.</description>
    <label>Travel Time to First Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>