bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Updated__c.field-meta.xml
<CustomField>
    <fullName>Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the daily visit list is updated</description>
    <label>Updated</label>
    <type>Checkbox</type>
</CustomField>