bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date__c</fullName>
    <description>Visit Date used in the Daily Visit List</description>
    <label>Visit Date</label>
    <type>Date</type>
</CustomField>