bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Visit_List_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Visit_List_Legacy_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Legacy system ID for the visit list.</description>
    <externalId>true</externalId>
    <label>Visit List Legacy ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>