bundled_metadata/force-app/main/default/objects/Visit_List__c/fields/Visit_List_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Visit_List_Subtype__c</fullName>
    <description>*</description>
    <label>Visit List Subtype</label>
    <length>100</length>
    <type>Text</type>
</CustomField>