bundled_metadata/force-app/main/default/objects/Visit_List__c/recordTypes/Sales_Daily_Visit_List.recordType-meta.xml
<RecordType>
    <fullName>Sales_Daily_Visit_List</fullName>
    <active>true</active>
    <description>Sales Daily Visit List</description>
    <label>Sales Daily Visit List</label>
</RecordType>