bundled_metadata/force-app/main/default/objects/Visit_List__c/recordTypes/Visit_List_Group.recordType-meta.xml
<RecordType>
    <fullName>Visit_List_Group</fullName>
    <active>true</active>
    <description>All the visits for one user for a week</description>
    <label>Visit List Group</label>
</RecordType>