bundled_metadata/force-app/main/default/objects/Visit_List__c/validationRules/EUSFA_PreventStatusChangeAfterCompleted.validationRule-meta.xml
<ValidationRule>
    <fullName>EUSFA_PreventStatusChangeAfterCompleted</fullName>
    <active>false</active>
    <description>Prevents editing the visit list record once the status is completed</description>
    <errorConditionFormula>AND(
  ISPICKVAL(PRIORVALUE(Status__c), &quot;Completed&quot;),
  NOT(ISNEW())
)</errorConditionFormula>
    <errorMessage>Visit list cannot be changed once the Status is marked as Completed.</errorMessage>
</ValidationRule>